<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.auth.AuthFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bet_bub" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/yellow"
        android:scrollbars="vertical">
        <!--            android:layout_margin="30dp"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_layout_focus_style"
                    android:hint="@string/username"
                    android:paddingLeft="20dp" />

                <EditText
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_layout_focus_style"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/login_button_black_style"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/login"
                    android:textColor="@color/yellow"
                    android:textSize="20dp"
                    app:backgroundTint="@null" />


            </LinearLayout>

            <com.nex3z.flowlayout.FlowLayout
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center">

                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy" />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/gold_dark" />

                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_conditions" />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/gold_dark" />
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rules_regulations" />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/gold_dark" />

                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kyc" />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/gold_dark" />

                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsible_gaming" />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/gold_dark" />

                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us" />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/gold_dark" />

                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/self_exclusion" />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/gold_dark" />

                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/underage_policy" />


            </com.nex3z.flowlayout.FlowLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_60"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/white_circle_style"
                    android:padding="5dp"
                    android:src="@drawable/whatsapp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/white_circle_stoke_style"
                    android:padding="5dp"
                    android:src="@drawable/telegram" />

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/facebook" />

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/white_circle_stoke_style"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/white_circle_style"
                    android:src="@drawable/google_plus" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>