<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/inplay_play_bg_style"
            android:padding="5dp"
            android:src="@drawable/ic_play" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/inplay_power_bg_style"
            android:padding="5dp"
            android:src="@drawable/ic_power" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/in_play2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/pin"
                android:background="@drawable/inplay_e_bg_style">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/e_bg_shape_style"
                    android:paddingLeft="7dp"
                    android:text="E"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/cricket"
                    android:textColor="@color/blue_dark_700"
                    android:textSize="16sp" />
            </LinearLayout>


            <ImageView
                android:id="@+id/pin"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:src="@drawable/ic_set_pin" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/green_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/underage_policy"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>